--- a/fonts/static/woff2/SUIT.css
+++ b/fonts/static/woff2/SUIT.css
@@ -1,45 +1,45 @@
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 100;
-	src: local('SUIT Thin'), url('./SUIT-Thin.woff2') format('woff2');
+	src: url('./SUIT-Thin.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 200;
-	src: local('SUIT ExtraLight'), url('./SUIT-ExtraLight.woff2') format('woff2');
+	src: url('./SUIT-ExtraLight.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 300;
-	src: local('SUIT Light'), url('./SUIT-Light.woff2') format('woff2');
+	src: url('./SUIT-Light.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 400;
-	src: local('SUIT Regular'), url('./SUIT-Regular.woff2') format('woff2');
+	src: url('./SUIT-Regular.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 500;
-	src: local('SUIT Medium'), url('./SUIT-Medium.woff2') format('woff2');
+	src: url('./SUIT-Medium.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 600;
-	src: local('SUIT SemiBold'), url('./SUIT-SemiBold.woff2') format('woff2');
+	src: url('./SUIT-SemiBold.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 700;
-	src: local('SUIT Bold'), url('./SUIT-Bold.woff2') format('woff2');
+	src: url('./SUIT-Bold.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 800;
-	src: local('SUIT ExtraBold'), url('./SUIT-ExtraBold.woff2') format('woff2');
+	src: url('./SUIT-ExtraBold.woff2') format('woff2');
 }
 @font-face {
 	font-family: 'SUIT';
 	font-weight: 900;
-	src: local('SUIT Heavy'), url('./SUIT-Heavy.woff2') format('woff2');
+	src: url('./SUIT-Heavy.woff2') format('woff2');
 }
