--- a/fonts/variable/woff2/SUIT-Variable.css
+++ b/fonts/variable/woff2/SUIT-Variable.css
@@ -1,5 +1,5 @@
 @font-face {
 	font-family: 'SUIT Variable';
 	font-weight: 100 900;
-	src: local('SUIT Variable Regular'), url('./SUIT-Variable.woff2') format('woff2-variations');
+	src: url('./SUIT-Variable.woff2') format('woff2-variations');
 }
